# Crypto-Neural-Network

./: .gitignore  GetHistoricalData.py  README.md  yeet.py
cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  nn.sln  nn.vcxproj  nn.vcxproj.filters
cpp/src/: nn.cpp  nn.h
